Update 5.Custom Types in TypeScript.md

--- a/5.Custom Types in TypeScript.md
+++ b/5.Custom Types in TypeScript.md
@@ -145,13 +145,8 @@ A **class** groups related data (properties) and behavior (methods):
 
 class Point {
 
-    private x: number;
-    private y: number;
-
-    constructor(x: number, y: number) {
-        this.x = x;
-        this.y = y;
-    }
+    x: number;
+    y: number;
 
     draw() {
         console.log("Drawing point at (" + this.x + ", " + this.y + ")");
@@ -163,23 +158,7 @@ class Point {
         return Math.sqrt(dx * dx + dy * dy);
     }
 }
-
-const point1 = new Point(1, 2); // Create an object
-point1.draw(); 
-
-const point2 = new Point(4, 6);
-point2.draw();
-
-console.log("Distance between points: " + point1.getDistance(point2));
-
 ```
-
-### output
-
-    [LOG]: "Drawing point at (1, 2)" 
-    [LOG]: "Drawing point at (4, 6)" 
-    [LOG]: "Distance between points: 5" 
-
 > Now everything related to a **Point** is in **one unit**.
 
 ---
